--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,14 @@
 buildscript {
     ext {
-        kotlinVersion = '1.3.61'
-        wpiLibVersion = "2020.3.2"
-        junit5Version = "5.5.2"
-        gdxVersion = '1.9.10'
-        box2DLightsVersion = '1.4'
+        kotlinVersion = '1.4.21' // https://kotlinlang.org/releases.html
+        wpiLibVersion = "2021.1.1-beta-4" // https://github.com/wpilibsuite/allwpilib/releases // TODO change
+        junit5Version = "5.7.0" // https://junit.org/junit5/
+        gdxVersion = '1.9.12' // https://github.com/libgdx/libgdx/releases
 //        roboSimVersion = "2de59f2ec1"
         roboSimVersion = "3e3c3d868ee1a9315bcad8a8a299b3c20d17f257".substring(0, 10)
         abstractControllerLibVersion = "v2.5.0"
         abstractDashboardVersion = "e635c7080d"
-        jacksonVersion = "2.10.1"
+        jacksonVersion = "2.12.0" // https://github.com/FasterXML/jackson-databind/releases
     }
     repositories {
         mavenLocal()
@@ -27,7 +26,7 @@ buildscript {
 subprojects {
     apply plugin: "kotlin"
     ext { // some of the variables in here may only be specific to a single module
-        appName = "robot2020-sim-app"
+        appName = "robot2021-sim-app"
         gdxVersion = "1.9.10"
     }
     repositories {
@@ -80,6 +79,6 @@ project(":desktop") {
 }
 
 wrapper {
-    gradleVersion = '6.1'
+    gradleVersion = '6.7.1' // https://gradle.org/releases/
     distributionType = Wrapper.DistributionType.ALL
 }
