--- a/wpi/build.gradle
+++ b/wpi/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
+    simulation wpi.deps.sim.driverstation(wpi.platforms.desktop, false)
 
     implementation "com.github.frc1444.robo-sim:wpi:$roboSimVersion"
     implementation "com.github.frc1444.robo-sim:wpi-controller:$roboSimVersion"
