--- a/gdx/build.gradle
+++ b/gdx/build.gradle
@@ -6,7 +6,7 @@ plugins {
 sourceCompatibility = 1.11
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 dependencies {
-    println("platform=${wpi.platforms.desktop}")
+//    println("platform=${wpi.platforms.desktop}")
     api "com.badlogicgames.gdx:gdx:$gdxVersion"
     api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
     api "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
