--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,13 @@ buildscript {
         kotlinVersion = '1.5.10' // https://kotlinlang.org/releases.html
         wpiLibVersion = "2022.1.1-beta-3" // https://github.com/wpilibsuite/allwpilib/releases
         junit5Version = "5.8.2" // https://junit.org/junit5/
-        // TODO upgrade to 1.10.0. This requires us to also update abstract controller lib to use gdx-controllers 2.x
-        gdxVersion = '1.9.13' // https://github.com/libgdx/libgdx/releases
-//        gdxControllersVersion = '2.0.0' // https://github.com/libgdx/gdx-controllers/releases // eventually we'll update once abstract-controller-lib does
+        gdxVersion = '1.10.0' // https://github.com/libgdx/libgdx/releases
+        // https://github.com/retrodaredevil/abstract-controller-lib/blob/2.0.0-branch/gdx2/build.gradle
+        gdxControllerVersion = '2.2.1' // https://github.com/libgdx/gdx-controllers/releases // eventually we'll update once abstract-controller-lib does
 //        roboSimVersion = "2de59f2ec1"
         roboSimVersion = "e4be8ea42de759d26f5752e133a9c0fa31989940".substring(0, 10) // https://jitpack.io/#frc1444/robo-sim
 //        abstractControllerLibVersion = "v2.5.0"
-        abstractControllerLibVersion = "e4d62bfdeb"
+        abstractControllerLibVersion = "d72cc3b5fd"
         abstractDashboardVersion = "e635c7080d"
         jacksonVersion = "2.13.0" // https://github.com/FasterXML/jackson-databind/releases
     }
