--- a/gdx/build.gradle
+++ b/gdx/build.gradle
@@ -9,7 +9,8 @@ dependencies {
 //    println("platform=${wpi.platforms.desktop}")
     api "com.badlogicgames.gdx:gdx:$gdxVersion"
     api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-    api "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
+    api "com.badlogicgames.gdx:gdx-controllers:1.9.13" // the old way
+//    api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$gdxControllerVersion" // the new way
 
     api "edu.wpi.first.ntcore:ntcore-java:$wpiLibVersion"
     api "edu.wpi.first.ntcore:ntcore-jni:$wpiLibVersion"
